fixed overlapping display of subhits thumbnail search hits

--- a/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/views/search/searchList.less
+++ b/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/views/search/searchList.less
@@ -428,11 +428,13 @@
     }
     &__hit-text-area {
 		max-width: 100%;
+		min-width: 160px;
 	}
     &__subhit-thumbnail {
     	img {
 	    	height: 60px;
 	    	padding: 5px 5px 0 0;
+			max-width: 100px;
     	}
     }
     &__hit-content-more {
